--- a/calculadora.html
+++ b/calculadora.html
@@ -17,11 +17,11 @@
     <thead>
       <tr>
         <th colspan="4">
-          <input class="rounded-pill bg-light" disabled type="text" id="operacion" name="operacion">
+          <input value="" class="rounded-pill bg-light" disabled type="text" id="operacion" name="operacion">
         </th>
       </tr>
     </thead>
-    <tbody class="text-center fs-2">
+    <tbody  class="text-center fs-2">
       <tr>
         <td class="numeros">1</td>
         <td class="numeros">2</td>
